feat: finish ward card logic